--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
                         </li>
                     </ul>
                     <div class="tab-content">
+                        <!-- tab 1 everything -->
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row g-4">
                                 <div class="col-lg-12">
@@ -454,19 +455,19 @@
                                     <div class="row g-4">
                                         <div class="col-md-6 col-lg-3">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-1.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event1.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Wedding</h4>
-                                                    <a href="img/01.jpg" data-lightbox="event-8" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event1.jpeg" data-lightbox="event-8" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-lg-3">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-2.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event2.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Wedding</h4>
-                                                    <a href="img/01.jpg" data-lightbox="event-9" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event2.jpeg" data-lightbox="event-9" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -480,19 +481,19 @@
                                     <div class="row g-4">
                                         <div class="col-md-6 col-lg-3">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-3.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event3.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Corporate</h4>
-                                                    <a href="img/01.jpg" data-lightbox="event-10" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event3.jpeg" data-lightbox="event-10" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-lg-3">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-4.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event4.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Corporate</h4>
-                                                    <a href="img/01.jpg" data-lightbox="event-11" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event4.jpeg" data-lightbox="event-11" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -506,19 +507,19 @@
                                     <div class="row g-4">
                                         <div class="col-md-6 col-lg-3">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-5.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event5.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Cocktail</h4>
-                                                    <a href="img/01.jpg" data-lightbox="event-12" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event5.jpeg" data-lightbox="event-12" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-lg-3">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-6.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event6.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Cocktail</h4>
-                                                    <a href="img/01.jpg" data-lightbox="event-13" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event6.jpeg" data-lightbox="event-13" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -532,19 +533,19 @@
                                     <div class="row g-4">
                                         <div class="col-md-6 col-lg-3">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-7.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event7.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Buffet</h4>
-                                                    <a href="img/01.jpg" data-lightbox="event-14" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event7.jpeg" data-lightbox="event-14" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-lg-3">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-8.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event8.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Buffet</h4>
-                                                    <a href="img/01.jpg" data-lightbox="event-15" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event8.jpeg" data-lightbox="event-15" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
