--- a/index.html
+++ b/index.html
@@ -1470,7 +1470,7 @@
                     <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.1s">
                         <div class="blog-item">
                             <div class="overflow-hidden rounded">
-                                <img src="img/blog-1.jpg" class="img-fluid w-100" alt="">
+                                <img src="img/chefke.jpg" class="img-fluid w-100" alt="">
                             </div>
                             <div class="blog-content mx-4 d-flex rounded bg-light">
                                 <div class="text-dark bg-primary rounded-start">
