--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="modal-dialog modal-fullscreen">
                 <div class="modal-content rounded-0">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Search by keyword</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">Search Menu foods, we deliver fast!</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body d-flex align-items-center">
@@ -128,7 +128,7 @@
                     </div>
                     <div class="col-lg-7 wow bounceInUp" data-wow-delay="0.3s">
                         <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">About Us</small>
-                        <h1 class="display-5 mb-4">Trusted By 200 + satisfied clients</h1>
+                        <h1 class="display-5 mb-4">Trusted by 200 + satisfied clients</h1>
                         <p class="mb-4">At Wangeci’s Kitchen, we believe that exceptional catering is not just about serving food—it’s about
                              crafting memorable experiences. Founded with a passion for culinary excellence and a commitment to impeccable service, 
                              our company is dedicated to transforming every event into a sophisticated celebration.</p>
