--- a/service.html
+++ b/service.html
@@ -34,10 +34,34 @@
     <body>
 
         <!-- Spinner Start -->
-        <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
+        <!-- <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
             <div class="spinner-grow text-primary" role="status"></div>
-        </div>
+        </div> -->
         <!-- Spinner End -->
+
+        <!-- pre loader start -->
+        <div class="preloader d-flex align-items-center justify-content-center">
+            <div class="preloader-content">
+                <h3>Cooking in progress..</h3>
+                <div id="cooking">
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div class="bubble"></div>
+                    <div id="area">
+                        <div id="sides">
+                            <div id="pan"></div>
+                            <div id="handle"></div>
+                        </div>
+                        <div id="pancake">
+                            <div id="pastry"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- pre loader end -->
 
         <!-- Navbar start -->
         <div class="container-fluid nav-bar">
