--- a/event.html
+++ b/event.html
@@ -36,7 +36,7 @@
         <!-- pre loader start -->
         <div class="preloader d-flex align-items-center justify-content-center">
             <div class="preloader-content">
-                <h3>Cooking in progress..</h3>
+                <h3>Great Events..</h3>
                 <div id="cooking">
                     <div class="bubble"></div>
                     <div class="bubble"></div>
